// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DropZone > should render correctly 1`] = `
<div>
  <div
    aria-label="File Dropzone"
    class="HvDropZone-dropZoneLabelsGroup css-713atf-StyledDropZoneLabelsGroup e1r4xwg210"
    id="dropzone-test"
  >
    <label
      class="HvDropZone-dropZoneLabel e1r4xwg29 HvLabel-root e17iqvr40 HvTypography-root HvTypography-label css-1roatrt-getStyledComponent-StyledTypography-StyledLabel e1tnpalo0"
      for="dropzone-test-input-file"
      id="dropzone-test-input-file-label"
    >
      Label
    </label>
    <label
      class="e1r4xwg28 HvInfoMessage-root HvInfoMessage-gutter e5krntv0 HvTypography-root HvTypography-body css-1iahecy-getStyledComponent-StyledTypography-StyledInfoMessage e1tnpalo0"
      id="dropzone-test-description"
    >
      Max. file size: 1.00B
      Accepted files:
    </label>
  </div>
  <div
    class="HvDropZone-dropZoneContainer css-14gqe2s-StyledDropZoneContainer e1r4xwg27"
    id="dropzone-test-button"
    role="button"
    tabindex="0"
  >
    <input
      accept=""
      class="HvDropZone-inputArea css-yg1b7p-StyledInput e1r4xwg26"
      id="dropzone-test-input-file"
      multiple=""
      tabindex="-1"
      title="Drag and drop or Select files"
      type="file"
    />
    <div
      class="HvDropZone-dropArea css-tnj4j3-StyledDropArea e1r4xwg25"
    >
      <div
        class="HvDropZone-dropZoneAreaIcon e1r4xwg22 css-pq8p29-StyledDropAreaIcon"
        name="Doc"
      >
        <svg
          focusable="false"
          height="32"
          viewBox="0 0 16 16"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="color0"
            d="M9 0H2v16h12V5zm3.6 5H9V1.4zm.4 10H3V1h5v5h5z"
            fill="var(--uikit-colors-acce1)"
          />
        </svg>
      </div>
      <div
        class="HvDropZone-dropZoneAreaLabels css-1kosfbb-StyledDropAreaLabels e1r4xwg21"
      >
        <p
          class="HvDropZone-dragText e1r4xwg23 HvTypography-root HvTypography-body css-1xibpeq-getStyledComponent-StyledDragText e1tnpalo0"
        >
          Drag and drop or
          <span
            class="HvDropZone-selectFilesText css-vkoe8m-StyledSelectedFilesText e1r4xwg20"
          >
             Select files
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropZone > should render correctly when disabled 1`] = `
<div>
  <div
    aria-label="File Dropzone"
    class="HvDropZone-dropZoneLabelsGroup css-713atf-StyledDropZoneLabelsGroup e1r4xwg210"
    id="dropzone-test"
  >
    <label
      class="HvDropZone-dropZoneLabel e1r4xwg29 HvLabel-root e17iqvr40 HvTypography-root HvTypography-label css-pgpp4i-getStyledComponent-StyledTypography-StyledLabel e1tnpalo0"
      for="dropzone-test-input-file"
      id="dropzone-test-input-file-label"
    >
      Label
    </label>
    <label
      class="e1r4xwg28 HvInfoMessage-root HvInfoMessage-gutter e5krntv0 HvTypography-root HvTypography-body css-1kyma7w-getStyledComponent-StyledTypography-StyledInfoMessage e1tnpalo0"
      id="dropzone-test-description"
    >
      Max. file size: 1.00B
      Accepted files:
    </label>
  </div>
  <div
    class="HvDropZone-dropZoneContainer HvDropZone-dropZoneContainerDisabled css-ozefkj-StyledDropZoneContainer e1r4xwg27"
    id="dropzone-test-button"
    role="button"
    tabindex="0"
  >
    <input
      accept=""
      class="HvDropZone-inputArea css-yg1b7p-StyledInput e1r4xwg26"
      disabled=""
      id="dropzone-test-input-file"
      multiple=""
      tabindex="-1"
      title=""
      type="file"
    />
    <div
      class="HvDropZone-dropArea css-tnj4j3-StyledDropArea e1r4xwg25"
    >
      <div
        class="HvDropZone-dropZoneAreaIcon e1r4xwg22 css-pq8p29-StyledDropAreaIcon"
        name="Doc"
      >
        <svg
          focusable="false"
          height="32"
          viewBox="0 0 16 16"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="color0"
            d="M9 0H2v16h12V5zm3.6 5H9V1.4zm.4 10H3V1h5v5h5z"
            fill="var(--uikit-colors-atmo5)"
          />
        </svg>
      </div>
      <div
        class="HvDropZone-dropZoneAreaLabels css-1kosfbb-StyledDropAreaLabels e1r4xwg21"
      >
        <p
          class="HvDropZone-dragText e1r4xwg23 HvTypography-root HvTypography-body css-1xibpeq-getStyledComponent-StyledDragText e1tnpalo0"
        >
          Drag and drop or
          <span
            class="HvDropZone-selectFilesText css-vkoe8m-StyledSelectedFilesText e1r4xwg20"
          >
             Select files
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;
